# ARTSLAM_CORE

./: CMakeLists.txt  README.md  package.xml
src/: CMakeLists.txt
src/artslam_g2o/: edge_plane_identity.hpp  edge_plane_parallel.hpp  edge_plane_prior.hpp  edge_se3_plane.hpp  edge_se3_priorquat.hpp  edge_se3_priorvec.hpp  edge_se3_priorxy.hpp  edge_se3_priorxyz.hpp  robust_kernel_io.hpp
src/artslam_io/: CMakeLists.txt  kitti_reader.cpp  kitti_reader.hpp  mulran_io.cpp  mulran_io.h  pointcloud_io.cpp  pointcloud_io.h
src/artslam_types/: CMakeLists.txt  keyframe.cpp  keyframe.h  types.hpp  types_eigen.hpp  types_pcl.hpp  types_slam.hpp
src/artslam_utils/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  eigen_utils.cpp  eigen_utils.h  radar_utils.cpp  radar_utils.h  types_converter.cpp  types_converter.h
src/tests/: CMakeLists.txt  artslam_core_g2o_test.cpp  artslam_core_io_test.cpp  artslam_core_types_test.cpp
